<resources>
    <string name="app_name">Dripper</string>

    <!--Menu Strings-->
    <string name="menu_irrigation">Irrigação</string>
    <string name="menu_sensor_data">Sensores</string>
    <string name="menu_settings">Configurações</string>

    <!--Sensor fragment strings-->
    <string name="sensor_data_temperature">Temperatura:</string>
    <string name="sensor_data_moisture">Umidade:</string>
    <string name="sensor_data_luminosity">Luminosidade:</string>
    <string name="sensor_data_soil_moisture">Umidade do Solo:</string>

    <!--Irrigation fragment strings-->
    <string name="switch_auto_label">Modo Automático:</string>
    <string-array
        name="spinner_irrigation_modes_array">
        <item>Programada</item>
        <item>Periódica</item>
    </string-array>
    <string name="spinner_irrigation_modes_prompt">""</string>

    <string name="schedule_sunday">D</string>
    <string name="schedule_monday">S</string>
    <string name="schedule_tuesday">T</string>
    <string name="schedule_wednesday">Q</string>
    <string name="schedule_thursday">Q</string>
    <string name="schedule_friday">S</string>
    <string name="schedule_saturday">S</string>

    <string name="scheduled_irrigation">Irrigação Periódica</string>
    <string name="one_time_irrigation">Irrigação Programada</string>
    <string name="schedule_start">Início:</string>
    <string name="schedule_duration">Duração:</string>
    <string name="schedule_date">Data:</string>

    <string name="menu_edit_item">Editar</string>
    <string name="menu_delete">Excluir</string>

    <string name="edit_menu_mode">Tipo</string>
    <string name="edit_menu_time">Hora</string>
    <string name="edit_menu_date">Data</string>
    <string name="edit_menu_duration">Duração</string>

    <string name="edit_menu_btn_cancel">Cancelar</string>
    <string name="edit_menu_btn_save">Salvar</string>

    <string name="dialog_btn_confirm">Confirmar</string>

    <string name="sync_btn">SYNC</string>
    <string name="config_btn">CONFIG</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->
    <string name="settings_mac_address">Endereço MAC</string>
    <string name="settings_default_mac_address">00:00:00:00:00:00</string>
    <string name="settings_user_manual">Manual do Usuário</string>
    <string name="settings_faq">Perguntas Frequentes</string>
    <string name="settings_about">Sobre</string>
    <string name="settings_clear_data">Apagar Dados</string>
    <string name="shared_prefs_filename">org.senai.mecatronica.dripper.sharedPrefs</string>

</resources>
