<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.senai.mecatronica.dripper.activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/settings_item_general_padding"
        android:paddingStart="@dimen/settings_item_general_padding"
        android:id="@+id/layout_user_manual_item"
        android:layout_height="@dimen/settings_item_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/lbl_settings_user_manual"
            android:text="@string/settings_user_manual"
            android:textSize="@dimen/text_size_settings"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_pdf_file"
            android:id="@+id/img_settings_pdf"
            android:layout_marginRight="14dp"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadows"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="start|center_vertical"
        android:paddingLeft="@dimen/settings_item_general_padding"
        android:paddingStart="@dimen/settings_item_general_padding"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/layout_mac_address_item">

        <TextView
            android:text="@string/settings_mac_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_settings_mac_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_settings_mac_address"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/lbl_settings_mac_address"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/text_size_settings"
            android:text="@string/settings_default_mac_address"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadows"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/lbl_settings_about"
        android:paddingLeft="@dimen/settings_item_general_padding"
        android:paddingStart="@dimen/settings_item_general_padding"
        android:text="@string/settings_about"
        android:textSize="@dimen/text_size_settings"
        android:gravity="start|center_vertical"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadows"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:id="@+id/lbl_settings_clear_data"
        android:paddingLeft="@dimen/settings_item_general_padding"
        android:paddingStart="@dimen/settings_item_general_padding"
        android:text="@string/settings_clear_data"
        android:textSize="@dimen/text_size_settings"
        android:gravity="start|center_vertical"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadows"
        android:id="@+id/view2"/>

</LinearLayout>
